--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -164,6 +164,17 @@
       }
     }
   }
+
+  &_short {
+
+    .box {
+      margin-right: 4px;
+    }
+
+    #{$b}__title {
+      letter-spacing: .02em;
+    }
+  }
 }
 
 .offer-info-radio {
