--- a/app/blocks/status/status.scss
+++ b/app/blocks/status/status.scss
@@ -1,3 +1,13 @@
 .status {
   $b: &;
+
+  @include text12;
+
+  line-height: 1;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 3px 3px 2px;
+  background-color: $color-status-bg;
+  color: $color-white;
 }
