--- a/app/blocks/switch/switch.scss
+++ b/app/blocks/switch/switch.scss
@@ -123,4 +123,26 @@
       }
     }
   }
+
+  &_big {
+
+    #{$b}__status {
+      @include text15;
+
+      font-weight: 700;
+    }
+  }
+
+  &_reverse {
+
+    #{$b} {
+      &__toggle {
+        @include screen('sm') {
+          order: 2;
+          margin-left: 10px;
+          margin-right: 0;
+        }
+      }
+    }
+  }
 }
