--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -84,4 +84,16 @@
       }
     }
   }
+
+  &_last {
+    margin-bottom: 104px;
+
+    @include screen('lg') {
+      margin-bottom: 80px;
+    }
+
+    @include screen('sm') {
+      margin-bottom: 70px;
+    }
+  }
 }
