--- a/app/components/space-offer/space-offer.pug
+++ b/app/components/space-offer/space-offer.pug
@@ -8,7 +8,7 @@ mixin space-offer-info()
 
 mixin space-offer-switch(name, value, checked)
   +e.switch&attributes(attributes)
-    +switch(name, value, checked)._reverse
+    +switch(name, value, checked)._reverse._big
 
 mixin space-offer-side()
   +e.side&attributes(attributes)
