--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -48,6 +48,12 @@
   letter-spacing: -.02em;
 }
 
+@mixin text22 {
+  font-size: 22px;
+  line-height: (26/22);
+  letter-spacing: -.02em;
+}
+
 @mixin text-big {
   font-size: 18px;
   line-height: (26/18);
