--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -87,6 +87,7 @@ $color-basic-gray: #b0b7c1;
 $color-offer-disable: #798394;
 $color-hint-bg: #151b25;
 $color-gray-lighter: #959fad;
+$color-status-bg: #a7afb8;
 
 
 // ##########
