--- a/app/blocks/offer-list/offer-list.pug
+++ b/app/blocks/offer-list/offer-list.pug
@@ -2,7 +2,7 @@ mixin offer-list(data)
   +b.UL.offer-list&attributes(attributes)
     each item in data
       +e.LI.item
-        +offer-info()(class="_light " + item.status)
+        +offer-info()(class="_light _short " + item.status)
           +box(class="_size10 " + item.box)
           +e.title #{item.name} <span class="offer-info__count">#{item.count}</span>
 
@@ -11,6 +11,6 @@ mixin offer-list-light(data)
   +b.UL.offer-list&attributes(attributes)
     each item in data
       +e.LI.item
-        +offer-info()(class=item.status)
+        +offer-info()(class="_short " + item.status)
           +box(class="_size10 " + item.box)
           +e.title #{item.name} <span class="offer-info__count">#{item.count}</span>
