--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -32,6 +32,20 @@ mixin slider-gallery(buttons, loupe)
       +e.A.loupe.js-open-gallery(data-targets="gallery")
         +icon('loupe').__loupe-icon
 
+mixin slider-gallery-bold(buttons, loupe)
+  +b.slider__._gallery._dark&attributes(attributes)
+    +e.container.swiper-container.js-slider-container
+      .swiper-wrapper
+        block
+    if buttons
+      +e.buttons_simple
+        +e.button._prev.js-slider-button-prev
+          +icon('slider-arrow-bold').__button-icon
+        +e.button._next.js-slider-button-next
+          +icon('slider-arrow-bold').__button-icon
+    if loupe
+      +e.A.loupe.js-open-gallery(data-targets="gallery")
+        +icon('loupe').__loupe-icon
 
 mixin slide
   +e.slide.swiper-slide&attributes(attributes)
