--- a/app/pages/host-spaces/host-spaces.pug
+++ b/app/pages/host-spaces/host-spaces.pug
@@ -15,7 +15,7 @@ block content
         +page-title('h1')._small.__title List of Spaces
         +e.info <b>18</b> rental offers within <b>3</b> spaces
         +button-plus('a')(href="#").__button Add new Space
-  +content-origin._reverse
+  +content-origin._reverse._last
     .container
       +content-column-aside.hide-xl
         +side-navigation('This page displays a list of your available Spaces. Click on space to manage it’s rental offers')
@@ -41,7 +41,7 @@ block content
                 +space-offer-title!= item.title
                 +e.media-wrapper_sm.hide-from-sm(data-slot-id=item.id data-slot-res="sm")
                   +space-offer-media(item.status)(data-target-slot=item.id)
-                    +slider-gallery(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
+                    +slider-gallery-bold(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
                       each slider in item.slider
                         +e.IMG.slide.swiper-slide(src=slider)
                 +space-offer-text!= item.describe
