--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -11,7 +11,7 @@ block content
         +link(href="index.html") Main (index.html)
         +link(href="space.html")  One Space (space.html)
         +link(href="account-settings.html")  Account settings(account-settings.html)
-        //- +link(href="host-spaces.html") My rental offers (HOST) (host-spaces.html) (IN PROGRESS)
+        +link(href="host-spaces.html") My rental offers (HOST) (host-spaces.html) (IN PROGRESS)
         //- +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html) (IN PROGRESS)
 
 block panels
