--- a/app/components/space-offer/space-offer.scss
+++ b/app/components/space-offer/space-offer.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  width: 100%;
 
   &:not(:last-child) {
     margin-bottom: 104px;
