--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -19,9 +19,34 @@
   .container {
     display: flex;
     align-items: stretch;
+
+    #{$b}_reverse & {
+      display: block;
+    }
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% + 50px);
+    margin-left: -25px;
+    margin-right: -25px;
+
+    @include screen('lg') {
+      width: calc(100% + 30px);
+      margin-right: -15px;
+      margin-left: -15px;
+    }
+
+    @include screen('sm') {
+      width: calc(100% + 10px);
+      margin-right: -5px;
+      margin-left: -5px;
+    }
   }
 
   &__column {
+    box-sizing: border-box;
 
     &_main {
       flex: 1;
@@ -39,30 +64,35 @@
       }
 
       #{$b}_reverse & {
-        padding-left: 50px;
-        padding-right: 0;
+        width: 75%;
+        flex: none;
+        padding-left: 25px;
+        padding-right: 25px;
         padding-top: 38px;
 
+        @include screen('xl') {
+          width: 100%;
+        }
+
         @include screen('lg') {
-          padding-left: 0;
+          padding-left: 15px;
+          padding-right: 15px;
         }
 
         @include screen('sm') {
           padding-top: 32px;
-        }
-
-        &_wide-xl {
-          @include screen('xl') {
-            width: 100%;
-            padding-left: 0;
-          }
+          padding-left: 5px;
+          padding-right: 5px;
         }
       }
 
-      &_wide-xl {
+      #{$b}_wide-lg & {
         @include screen('xl') {
+          width: 75%;
+        }
+
+        @include screen('lg') {
           width: 100%;
-          padding-right: 0;
         }
       }
     }
@@ -70,6 +100,37 @@
     &_aside {
       width: 368px;
       min-width: 368px;
+
+      #{$b}_reverse & {
+        min-width: 0;
+        width: 25%;
+        padding-left: 25px;
+        padding-right: 25px;
+
+        @include screen('xl') {
+          width: 100%;
+        }
+
+        @include screen('lg') {
+          padding-left: 15px;
+          padding-right: 15px;
+        }
+
+        @include screen('sm') {
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
+
+      #{$b}_wide-lg & {
+        @include screen('xl') {
+          width: 25%;
+        }
+
+        @include screen('lg') {
+          width: 100%;
+        }
+      }
     }
 
     &_ptop {
@@ -86,14 +147,14 @@
   }
 
   &_last {
-    margin-bottom: 104px;
+    padding-bottom: 104px;
 
     @include screen('lg') {
-      margin-bottom: 80px;
+      padding-bottom: 80px;
     }
 
     @include screen('sm') {
-      margin-bottom: 70px;
+      padding-bottom: 70px;
     }
   }
 }
