--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -14,50 +14,97 @@
   }
 
   .container {
+    display: block;
+  }
+
+  &__wrapper {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    width: calc(100% + 50px);
+    margin-left: -25px;
+    margin-right: -25px;
+
+    @include screen('lg') {
+      width: calc(100% + 30px);
+      margin-right: -15px;
+      margin-left: -15px;
+    }
+
+    @include screen('sm') {
+      width: calc(100% + 10px);
+      margin-right: -5px;
+      margin-left: -5px;
+    }
   }
 
   &__column {
+    box-sizing: border-box;
 
     &_main {
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      flex: 1;
+      width: 75%;
       box-sizing: border-box;
-      padding-left: 50px;
+      padding-left: 25px;
+      padding-right: 25px;
+
+      @include screen('xl') {
+        width: 100%;
+      }
 
       @include screen('lg') {
         justify-content: space-between;
         flex-wrap: wrap;
-        width: 100%;
         flex: none;
-        padding-left: 0;
+        padding-left: 15px;
+        padding-right: 15px;
       }
 
-      #{$b}_wide-xl & {
+      @include screen('sm') {
+        padding-right: 5px;
+        padding-left: 5px;
+      }
+
+      #{$b}_wide-lg & {
         @include screen('xl') {
+          width: 75%;
+        }
+
+        @include screen('lg') {
           width: 100%;
-          flex: none;
-          padding-left: 0;
         }
       }
     }
 
     &_side {
-      width: 368px;
-      min-width: 368px;
+      display: block;
+      width: 25%;
+      padding-left: 25px;
+      padding-right: 25px;
 
-      @include screen('lg') {
+      @include screen('xl') {
         width: 100%;
       }
 
-      #{$b}_wide-xl & {
+      @include screen('lg') {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      @include screen('sm') {
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+
+      #{$b}_wide-lg & {
         @include screen('xl') {
+          width: 25%;
+        }
+
+        @include screen('lg') {
           width: 100%;
-          flex: none;
         }
       }
     }
