--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -9,117 +9,118 @@ block header
 block content
   +content-origin._reverse
     .container
-      +content-column-aside._ptop.hide-xl
-        +side-navigation('Change your personal info, password and notification options here')
-          +nav-list-sidebar(getData('side-menu-user.json'), 'Profile & Settings').__navigation
-      +content-column-main._main_wide-xl
-        +form._pb.js-form-with-hidden-panel
-          +form-section
-            +form-section-header
-              +form-section-title Basic account information
-            +grid.grid_big
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('First name')
-                    +input(type="text" name="firstName" value="Eugene" placeholder="First name")
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Last name')
-                    +input(type="text" name="lastName" value="Sheeleen" placeholder="Last name")
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Country')
-                    +select.js-select-input(name="country")
-                      option(value="placeholder" placeholder) Country
-                      option(value="uk" selected) United-Kingdom
-                      option(value="ru") Russia
-                      option(value="de") Germany
-                      option(value="fr") France
-              +col({xl: 6, lg: 12 }).grid__col_lg-order2
-                +form-section-wrapper
-                  +form-box('Phone number', '', 'div')._phone
-                    +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
-                    +input(type="tel" name="phone-number" value="768 968 98983" placeholder="Phone number" data-tel-number).form-box__phone_number
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('E-mail adress')
-                    +input(type="email" name="email" value="es@bsagency.design" placeholder="E-mail adress")
-          +form-section._bmg
-            +form-section-header._smg
-              +form-section-title Password change
-              +form-section-text In case you want to change your password just fill  the form below:
-            +grid.grid_big
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Old password')._password
-                    +input(type="password" name="oldPassword" value="EugeneEugene" placeholder="Old password" readonly)
-                    +e.SPAN.password-mask(data-password-mask)
-                      - for (var i = 0; i < 12; i++) {
-                        span
-                      - }
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('New password')
-                    +input(type="password" name="newPassword")
-              +col({xl: 6, lg: 12 }).grid__col_lg-order2
-                +form-section-wrapper
-                  +form-section-text._compensate
-                    p Forgot your existing password?
-                    +link(href="#")._gray._underline Recover the password VIA E-mail adress
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('New password one more time')
-                    +input(type="password" name="newPasswordConfirm")
-          +form-section._bmg._bmg_ext
-            +form-section-header._lg-mmg
-              +form-section-title Profile Data
-            +grid.grid_big
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Birthday', 'calendar2')._icon
-                    +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday")
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Residency country')
-                    +select.js-select-input(name="residencyCountry")
-                      option(value="placeholder" placeholder) Residency country
-                      option(value="lv" selected) Latvia
-                      option(value="ru") Russia
-                      option(value="de") Germany
-                      option(value="fr") France
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Education grade')
-                    +select.js-select-input(name="educationGrade")
-                      option(value="placeholder" placeholder) Education grade
-                      option(value="bachelor" selected) Bachelor
-                      option(value="doctor") Doctor
-                      option(value="master") Master
-                      option(value="basic") Basic
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Company name')
-                    +input(type="text" name="companyName" value="SIA Dezi BS" placeholder="Company name")
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper
-                  +form-box('Employee position')
-                    +input(type="text" name="employeePosition" value="Art-director" placeholder="Employee position")
-          +form-section
-            +form-section-header._bmg
-              +form-section-title Service settings and notifications
-            +grid.grid_big
-              +col({xl: 6, lg: 12 })
-                +form-section-wrapper._noflex
-                  +checkbox('settings', '1', true)._border Notify me Via E-mail about new messages
-                +form-section-wrapper._noflex
-                  +checkbox('settings', '2')._border Notify me about News and Benefits on Space Pool Service
-                +form-section-wrapper._noflex
-                  +checkbox('settings', '3')._border Send Me information about new offers via E-mail
-                +form-section-wrapper._noflex
-                  +checkbox('settings', '4')._border Send Me information about new offers via E-mail
-          +form-panel()(data-hidden-panel).__panel_fixed
-            +link-icon('select-arrow', 'button')(type="reset")._back._bold.__button.js-form-reset.js-hide-form-panel Discard <span class="hide-sm">changes</span>
-            +button('button')(type="submit").__button_wide.js-form-submit.js-hide-form-panel Save changes
+      +e.wrapper
+        +content-column-aside._ptop.hide-xl
+          +side-navigation('Change your personal info, password and notification options here')
+            +nav-list-sidebar(getData('side-menu-user.json'), 'Profile & Settings').__navigation
+        +content-column-main
+          +form._pb.js-form-with-hidden-panel
+            +form-section
+              +form-section-header
+                +form-section-title Basic account information
+              +grid.grid_big
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('First name')
+                      +input(type="text" name="firstName" value="Eugene" placeholder="First name")
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Last name')
+                      +input(type="text" name="lastName" value="Sheeleen" placeholder="Last name")
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Country')
+                      +select.js-select-input(name="country")
+                        option(value="placeholder" placeholder) Country
+                        option(value="uk" selected) United-Kingdom
+                        option(value="ru") Russia
+                        option(value="de") Germany
+                        option(value="fr") France
+                +col({xl: 6, lg: 12 }).grid__col_lg-order2
+                  +form-section-wrapper
+                    +form-box('Phone number', '', 'div')._phone
+                      +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
+                      +input(type="tel" name="phone-number" value="768 968 98983" placeholder="Phone number" data-tel-number).form-box__phone_number
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('E-mail adress')
+                      +input(type="email" name="email" value="es@bsagency.design" placeholder="E-mail adress")
+            +form-section._bmg
+              +form-section-header._smg
+                +form-section-title Password change
+                +form-section-text In case you want to change your password just fill  the form below:
+              +grid.grid_big
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Old password')._password
+                      +input(type="password" name="oldPassword" value="EugeneEugene" placeholder="Old password" readonly)
+                      +e.SPAN.password-mask(data-password-mask)
+                        - for (var i = 0; i < 12; i++) {
+                          span
+                        - }
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('New password')
+                      +input(type="password" name="newPassword")
+                +col({xl: 6, lg: 12 }).grid__col_lg-order2
+                  +form-section-wrapper
+                    +form-section-text._compensate
+                      p Forgot your existing password?
+                      +link(href="#")._gray._underline Recover the password VIA E-mail adress
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('New password one more time')
+                      +input(type="password" name="newPasswordConfirm")
+            +form-section._bmg._bmg_ext
+              +form-section-header._lg-mmg
+                +form-section-title Profile Data
+              +grid.grid_big
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Birthday', 'calendar2')._icon
+                      +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday")
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Residency country')
+                      +select.js-select-input(name="residencyCountry")
+                        option(value="placeholder" placeholder) Residency country
+                        option(value="lv" selected) Latvia
+                        option(value="ru") Russia
+                        option(value="de") Germany
+                        option(value="fr") France
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Education grade')
+                      +select.js-select-input(name="educationGrade")
+                        option(value="placeholder" placeholder) Education grade
+                        option(value="bachelor" selected) Bachelor
+                        option(value="doctor") Doctor
+                        option(value="master") Master
+                        option(value="basic") Basic
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Company name')
+                      +input(type="text" name="companyName" value="SIA Dezi BS" placeholder="Company name")
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper
+                    +form-box('Employee position')
+                      +input(type="text" name="employeePosition" value="Art-director" placeholder="Employee position")
+            +form-section
+              +form-section-header._bmg
+                +form-section-title Service settings and notifications
+              +grid.grid_big
+                +col({xl: 6, lg: 12 })
+                  +form-section-wrapper._noflex
+                    +checkbox('settings', '1', true)._border Notify me Via E-mail about new messages
+                  +form-section-wrapper._noflex
+                    +checkbox('settings', '2')._border Notify me about News and Benefits on Space Pool Service
+                  +form-section-wrapper._noflex
+                    +checkbox('settings', '3')._border Send Me information about new offers via E-mail
+                  +form-section-wrapper._noflex
+                    +checkbox('settings', '4')._border Send Me information about new offers via E-mail
+            +form-panel()(data-hidden-panel).__panel_fixed
+              +link-icon('select-arrow', 'button')(type="reset")._back._bold.__button.js-form-reset.js-hide-form-panel Discard <span class="hide-sm">changes</span>
+              +button('button')(type="submit").__button_wide.js-form-submit.js-hide-form-panel Save changes
 
 block panels
   +main-menu-inner
