--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -12,7 +12,7 @@ block content
         +link(href="space.html")  One Space (space.html)
         +link(href="account-settings.html")  Account settings(account-settings.html)
         +link(href="host-spaces.html") My rental offers (HOST) (host-spaces.html)
-        +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html) (IN PROGRESS)
+        //- +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html) (IN PROGRESS)
 
 block panels
   +main-menu
