--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -157,4 +157,16 @@
       padding-bottom: 70px;
     }
   }
+
+  &_top-mg {
+    margin-top: 31px;
+
+    @include screen('lg') {
+      margin-top: 46px;
+    }
+
+    @include screen('sm') {
+      margin-top: 10px;
+    }
+  }
 }
