--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -26,6 +26,7 @@ include ../blocks/header-menu/header-menu
 include ../blocks/header-user/header-user
 include ../blocks/hint/hint
 include ../blocks/icon/icon
+include ../blocks/indicator/indicator
 include ../blocks/info-price/info-price
 include ../blocks/link/link
 include ../blocks/lists/lists
@@ -56,6 +57,7 @@ include ../blocks/space/space
 include ../blocks/spoiler/spoiler
 include ../blocks/status/status
 include ../blocks/switch/switch
+include ../blocks/table-head/table-head
 include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
@@ -79,6 +81,7 @@ include ../components/offer-short/offer-short
 include ../components/offer/offer
 include ../components/page-header/page-header
 include ../components/side-navigation/side-navigation
+include ../components/space-info/space-info
 include ../components/space-offer/space-offer
 include ../components/ui-kit/ui-kit
 include ../components/user-menu-panel/user-menu-panel
