--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -1179,6 +1179,15 @@ block content
               +space-offer-buttons
               +space-offer-bottom(spaceOffers[3].offers)
 
+    //- Indicator
+    +ui-section
+      +ui-section-head
+        h2 indicator
+        p Блок: block/indicator
+      +ui-section-content
+        +ui-description .indicator
+        +indicator 3
+
 block panels
   +main-menu
 
