--- a/app/blocks/sidebar/sidebar.scss
+++ b/app/blocks/sidebar/sidebar.scss
@@ -3,10 +3,14 @@
 
   width: 100%;
   display: block;
-  background: $color-white;
+  background-color: $color-white;
 
   &_dark {
-    background: $color-grey-dark;
+    background-color: $color-grey-dark;
     color: $color-white;
+  }
+
+  &_no-bg {
+    background-color: transparent;
   }
 }
