--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -95,3 +95,9 @@
     display: none;
   }
 }
+
+.hide-only-lg {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
+    display: none;
+  }
+}
