--- a/app/components/main-menu/main-menu.pug
+++ b/app/components/main-menu/main-menu.pug
@@ -5,7 +5,7 @@ mixin main-menu()
     +e.wrapper
       +e.block
         +e.top
-          +close.js-open-navigation
+          +burger
         +e.scrollblock.js-scrollbar-light
           +e.content
             +e.top-menu
@@ -24,7 +24,7 @@ mixin main-menu-inner()
     +e.wrapper
       +e.block
         +e.top
-          +close.js-open-navigation
+          +burger
         +e.scrollblock.js-scrollbar-light
           +e.content
             +e.top-menu
