--- a/app/components/space-offer/space-offer.scss
+++ b/app/components/space-offer/space-offer.scss
@@ -54,6 +54,9 @@
     width: 30.67%;
     box-sizing: border-box;
     z-index: 2;
+    font-size: 0;
+    line-height: 0;
+    overflow: hidden;
 
     @include screen('lg') {
       display: none;
