--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -94,6 +94,7 @@ $color-status-bg: #a7afb8;
 // Transitions
 // ##########
 $ease-main: .3s ease;
+$ease-main-short: .15s ease;
 
 // ##########
 // Шрифты
