--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -52,6 +52,17 @@
       max-width: 320px;
       width: 100%;
     }
+
+    &::before {
+      @include pseudo;
+
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: calc(100% + 140px);
+      transform: translate3d(-50%, -50%, 0);
+      background-color: $color-white;
+    }
   }
 
   &__scrollblock {
@@ -62,7 +73,7 @@
   &__content {
     width: 100%;
     box-sizing: border-box;
-    padding-top: 115px;
+    padding-top: 112px;
     transition: padding $ease-main;
 
     @include screen('sm') {
@@ -71,6 +82,10 @@
 
     #{$b}.is-short & {
       padding-top: 70px;
+
+      @include screen('sm') {
+        padding-top: 50px;
+      }
     }
   }
 
@@ -82,14 +97,18 @@
     align-items: center;
     justify-content: flex-end;
     width: 100%;
-    height: 115px;
+    height: 112px;
     box-sizing: border-box;
-    padding: 0 63px;
+    padding: 0 50px;
     z-index: 3;
     background: linear-gradient(to bottom, $color-white 0%, $color-white 90%, rgba($color-white, 0) 90%);
 
     @media only screen and (max-width: 1720px) {
       padding: 0 40px;
+    }
+
+    @include screen('lg') {
+      padding: 0 36px;
     }
 
     @include screen('sm') {
@@ -99,6 +118,10 @@
 
     #{$b}.is-short & {
       height: 70px;
+
+      @include screen('sm') {
+        height: 50px;
+      }
     }
   }
 
@@ -119,10 +142,10 @@
     }
 
     .nav-list {
-      margin-top: -17px;
+      margin-top: -14px;
 
       @include screen('xl') {
-        margin-top: -20px;
+        margin-top: -17px;
       }
     }
   }
