--- a/app/pages/host-space-offers/host-space-offers.pug
+++ b/app/pages/host-space-offers/host-space-offers.pug
@@ -37,7 +37,7 @@ block content
                 +col({sm: 12, lg: 6, xl: 12})
                   +space-info-title() Blooming Founders Office Space (Former Blooms London old Factory)
                   +space-info-media.hide-only-lg(data-slot-id="media" data-slot-res="sm xl")
-                    +space-info-image(data-target-slot="media")(src="assets/images/room3.jpg")
+                    +space-info-image()(src="assets/images/room3.jpg" data-target-slot="media")
                   +space-info-address
                     p 2 Riding House St, Marylebone, London
                     p EC2A, London
